# reup_video

./: .env.example  .gitignore  .vercelignore  DEPLOY_GUIDE.md  DEPLOY_NETLIFY.md  Procfile  README_DEPLOY.md  build_exe.bat  build_mac.sh  douyin.cookies.txt  launcher.py  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  reup.py  reup.spec  reup_mac.spec  setup.bat  setup.iss  vercel.json  version_info.txt
.github/workflows/: build.yml
api/: index.py
assets/: generate_icon.py  generate_icon_mac.py  icon.icns
assets/macos/: Info.plist  Install.command  launcher
backend/: config.py  main.py  requirements.txt
backend/api/: routes.py  test_assets.py  test_cancel.py  test_job_logs.py
backend/scripts/: remove_purple_bg.py
backend/services/: cancel.py  downloader.py  gdrive.py  lark.py  playwright_downloader.py  processor.py  progress.py
flutter_ui/: README.md  netlify.toml  pubspec.yaml  run_safe.ps1
flutter_ui/lib/: app.dart  main.dart
flutter_ui/lib/constants/: colors.dart
flutter_ui/lib/models/: log_entry.dart
flutter_ui/lib/screens/: app_shell.dart  data_screen.dart  home_screen.dart  settings_screen.dart
flutter_ui/lib/services/: api_service.dart  update_service.dart
flutter_ui/lib/utils/: douyin_parser.dart  open_url.dart  open_url_impl.dart
flutter_ui/lib/widgets/: bottom_bar.dart  dest_panel.dart  log_panel.dart  media_panel.dart  panel_card.dart  sidebar.dart  source_panel.dart  top_bar.dart
flutter_ui/test/: widget_test.dart
flutter_ui/web/: index.html  manifest.json
flutter_ui/windows/: CMakeLists.txt
(+2 files in other folders)
